# backend-template

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
cli/: __init__.py
cli/commands/: create.py  generate.py  health.py  manageserver.py  server.py
cli/commands/templates/: new-app-check.md
cli/commands/utils/: new_app.py  new_endpoint.py  superuser.py
server/: main.py
server/controllers/validation/: v1.py
server/core/: connections.py  enums.py  utils.py
server/core/config/: __init__.py
server/core/config/db_config/: __init__.py  mongodb.py  postgresql.py  (+1 more)
server/core/documentation/: openapi.py  schemas.py
server/core/schemas/: __init__.py  accounts.py  utilities.py
server/dependencies/: authentication.py  clients.py  fields.py  form.py  requests.py
server/events/: service_registry.py  startup.py
server/events/auth/: signup.py
server/middlewares/: logging.py
server/migrations/: env.py  script.py.mako
server/migrations/versions/: 9ddfa01292bb_db_v1.py  d0e0df6c8246_db_v1.py  ddac9f49a4ef_db_v1.py
server/models/mongodb/: events.py
server/models/redis/: accounts.py  jwt.py  mail.py
server/repositories/auth/: cache.py  create.py  read.py  update.py
server/repositories/logs/: changes.py  requests.py
server/routes/auth/: __init__.py  v1.py
server/routes/health/: __init__.py  v1.py
server/routes/validation/: __init__.py  v1.py
server/schemas/requests/: auth.py
server/schemas/responses/: accounts.py  validation.py
server/utils/: authenticator.py  exceptions.py  helpers.py  managers.py
server/utils/mail/: __init__.py  links.py  tasks.py
tests/test_core/: test_enums.py  test_schemas.py  test_utils.py
tests/test_core/test_config/: test_init.py
tests/test_core/test_documentation/: test_openapi.py  test_schemas.py
(+38 files in other folders)
