[tool.poetry]
name = "backend-template"
version = "0.1.0"
description = "A template for containerized backend application using `fastapi` with PostgreSQL, MongoDB, Redis, and more"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
beanie = {extras = ["queue"], version = "^1.26.0"}
redis = "^5.0.7"
passlib = {extras = ["argon2", "bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.4.1"
fastapi-sso = "^0.15.0"
inflection = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
ruff = "^0.5.1"
typer = "^0.12.3"
pytest = "^8.2.2"
coverage = "^7.5.4"

[tool.black]
line-length = 140
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.flake8]
max-line-length = 140
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 140
skip_gitignore = true

[tool.ruff]
line-length = 140
exclude = [".git", "__pycache__", "dist"]
target-version = "py312"
lint.ignore = ["F821"]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
